--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StopSpotter:  Search bus stops nearby</title>
+    <title>GodelAI: Delivery Route Optimizer</title>
     <!-- Load Google Maps API with callback -->
     <script>
       // Define callback function
